// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Logo render check 1`] = `
<DocumentFragment>
  <header
    class="css-i1a01a"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;

exports[`Logo test cases Logo render with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-1bptyt9"
    size="10"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;
